5.14.4openmpi
	- fixed build issues due to API changes in MPI-3
	- fixed potential buffer overflow when reading the filter file
	- enabled access to CUPTI counters for CUDA tracing via CUPTI
	- enabled GPU memory usage tracing independent of the CUDA API
	- enabled recording of CUDA synchronization and implicit synchronization in 
	  blocking CUDA memory copies for CUDA tracing via CUPTI
	- enabled recording of synchronous peer-to-peer CUDA memory copies for CUDA
	  tracing via CUPTI
	- consider CUDA data transfers as not idle for option 'pure_idle'
	- fixed identification of the CUDA device ID for CUDA tracing via CUPTI
	- fixed region filtering for applications using the CUDA runtime API wrapper
	- compiler wrappers: add path to mpi.h to the PDT parser command and
	  preprocessor flags

5.14.3openmpi
	- updated version of internal OTF to 1.12.3openmpi
	  (see extlib/otf/ChangeLog)
	- fixed build error when using the Intel MPI compiler wrappers
	- prepend cross-prefix to the compiler wrappers *only* if
	  '--with-cross-prefix[=PREFIX]' is given
	- fixed passing FCFLAGS to the Fortran compiler when building libvt-fmpi
	- temporary disabled memory allocation tracing for multi-threaded
	  applications (introduced in v5.14.1) due to broken counter values
	  when memory is freed in a different thread than where it was allocated
	- fixed a potential minor bug in CUPTI activity stream handling
	- workaround for CUDA 5.0 bug: do not call cuDeviceSynchronize(), if
	  stream reuse is enabled and a CUDA stream is about to be destroyed
	- fixed segmentation fault when writing intermediate statistics
	  (VT_STAT_INTV != 0)
	- vtdyn: do not instrument regions where using a trap is required
	- plugin counters: Merge a set of post-mortem counters and write them
	  under a single async key. This speeds up the unification.
	- vtsetup: fixed availability state of the exec tracing feature

5.14.2openmpi
	- fixed build error occurred if VT is configured with exec tracing