@@ -1,8 +1,13 @@
 ##
 # @configure_input@
 #
-# make fortran_wrapper.c
+# make vtlib/vt_fmpiwrap.gen.c
 ##
+
+# exit the script if any statement returns a non-true return value
+set -e
+
+
 
 export SRCDIR=@top_vt_srcdir@/config/mpigen
 
