@@ -1,8 +1,13 @@
 ##
 # @configure_input@
 #
-# make vt_mpireg.[c|h]
+# make vtlib/vt_mpireg.gen.[c|h]
 ##
+
+# exit the script if any statement returns a non-true return value
+set -e
+
+
 
 export SRCDIR=@top_vt_srcdir@/config/mpigen
 
